scenario/src/Parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.2 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export type IClassParts = Array<string | IClassParts>

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return '"' + literalEscape(expectation.text) + '"';
        case "class": {
          const escapedParts = expectation.parts.map(part => {
            return Array.isArray(part)
            ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
            : classEscape(part);
          });   
          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        }
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

export interface ICached {
  nextPos: number;
  result: any;
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions: {[id: string]: any} = { tests: peg$parsetests, step: peg$parsestep, macros: peg$parsemacros };
  let peg$startRuleFunction: () => any = peg$parsetests;

  const peg$c0 = function(head: any, t: any) { return t; };
  const peg$c1 = function(head: any, tail: any) { return tail.reduce((acc, el) => addTopLevelEl(acc, el), addTopLevelEl({macros: {}, tests: {}}, head)); };
  const peg$c2 = function(values: any) { return values !== null ? values.tests : {}; };
  const peg$c3 = function(values: any) { return values !== null ? values.macros : {}; };
  const peg$c4 = "Test";
  const peg$c5 = peg$literalExpectation("Test", false);
  const peg$c6 = function(name: any, steps: any) { return {type: 'test', test: getString(name), steps: steps}; };
  const peg$c7 = "GasTest";
  const peg$c8 = peg$literalExpectation("GasTest", false);
  const peg$c9 = function(name: any, steps: any) { return {type: 'test', test: getString(name), steps: ["Gas"].concat(steps)}; };
  const peg$c10 = "Pending";
  const peg$c11 = peg$literalExpectation("Pending", false);
  const peg$c12 = function(name: any, steps: any) { return {type: 'test', test: getString(name), steps: ["Pending"].concat(steps)}; };
  const peg$c13 = "Only";
  const peg$c14 = peg$literalExpectation("Only", false);
  const peg$c15 = function(name: any, steps: any) { return {type: 'test', test: getString(name), steps: ["Only"].concat(steps)}; };
  const peg$c16 = "Skip";
  const peg$c17 = peg$literalExpectation("Skip", false);
  const peg$c18 = function(name: any, steps: any) { return {type: 'test', test: getString(name), steps: ["Skip"].concat(steps)}; };
  const peg$c19 = "Macro";
  const peg$c20 = peg$literalExpectation("Macro", false);
  const peg$c21 = function(name: any, args: any, steps: any) { return {type: 'macro', name: getString(name), args: args || [], steps: steps}; };
  const peg$c22 = function(head: any, tail: any) { return [head].concat(tail).filter((x) => !!x); };
  const peg$c23 = function(args: any) { return args !== null ? args.flat() : []; };
  const peg$c24 = "...";
  const peg$c25 = peg$literalExpectation("...", false);
  const peg$c26 = "=";
  const peg$c27 = peg$literalExpectation("=", false);
  const peg$c28 = function(splat: any, arg: any, t: any) { return t; };
  const peg$c29 = function(splat: any, arg: any, def: any) { return { arg, def, splat }; };
  const peg$c30 = function(tokens: any) { return tokens !== null ? tokens.flat() : []; };
  const peg$c31 = function(head: any, step: any) { return step; };
  const peg$c32 = function(steps: any) { return steps !== null ? steps : []; };
  const peg$c33 = function(step: any) { return step; };
  const peg$c34 = function() { return null; };
  const peg$c35 = function(val: any) { return val; };
  const peg$c36 = function(head: any, value: any) { return value };
  const peg$c37 = function(head: any, tail: any) { return [head].concat(tail.flat(1)); };
  const peg$c38 = function(inner: any) { return [inner]; };
  const peg$c39 = function(inner: any) { return [["List"].concat((inner || []).flat())] };
  const peg$c40 = "--";
  const peg$c41 = peg$literalExpectation("--", false);
  const peg$c42 = /^[^\n]/;
  const peg$c43 = peg$classExpectation(["\n"], true, false);
  const peg$c44 = "#";
  const peg$c45 = peg$literalExpectation("#", false);
  const peg$c46 = ":";
  const peg$c47 = peg$literalExpectation(":", false);
  const peg$c48 = function(token1: any, token2: any) { return {argName: token1, argValue: token2} };
  const peg$c49 = /^[A-Za-z0-9_]/;
  const peg$c50 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false);
  const peg$c51 = function(t: any) { return t.join("") };
  const peg$c52 = "0x";
  const peg$c53 = peg$literalExpectation("0x", false);
  const peg$c54 = /^[0-9a-fA-F]/;
  const peg$c55 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false);
  const peg$c56 = function(hex: any) { return ["Hex", hex.flat().flat().join("")] };
  const peg$c57 = "-";
  const peg$c58 = peg$literalExpectation("-", false);
  const peg$c59 = "+";
  const peg$c60 = peg$literalExpectation("+", false);
  const peg$c61 = /^[0-9]/;
  const peg$c62 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c63 = ".";
  const peg$c64 = peg$literalExpectation(".", false);
  const peg$c65 = "e";
  const peg$c66 = peg$literalExpectation("e", false);
  const peg$c67 = function(n: any) { return ["Exactly", n.flat().flat().join("")] };
  const peg$c68 = function(head: any, tail: any) { return [head].concat(tail.flat()); };
  const peg$c69 = "(";
  const peg$c70 = peg$literalExpectation("(", false);
  const peg$c71 = ")";
  const peg$c72 = peg$literalExpectation(")", false);
  const peg$c73 = "[";
  const peg$c74 = peg$literalExpectation("[", false);
  const peg$c75 = "]";
  const peg$c76 = peg$literalExpectation("]", false);
  const peg$c77 = "\r";
  const peg$c78 = peg$literalExpectation("\r", false);
  const peg$c79 = "\n";
  const peg$c80 = peg$literalExpectation("\n", false);
  const peg$c81 = "\t";
  const peg$c82 = peg$literalExpectation("\t", false);
  const peg$c83 = "    ";
  const peg$c84 = peg$literalExpectation("    ", false);
  const peg$c85 = "\\";
  const peg$c86 = peg$literalExpectation("\\", false);
  const peg$c87 = peg$otherExpectation("whitespace");
  const peg$c88 = /^[ \t]/;
  const peg$c89 = peg$classExpectation([" ", "\t"], false, false);
  const peg$c90 = /^[ \t\r\n]/;
  const peg$c91 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);
  const peg$c92 = peg$otherExpectation("string");
  const peg$c93 = function(chars: any) { return ["String", chars.join("")]; };
  const peg$c94 = "\"";
  const peg$c95 = peg$literalExpectation("\"", false);
  const peg$c96 = "/";
  const peg$c97 = peg$literalExpectation("/", false);
  const peg$c98 = "b";
  const peg$c99 = peg$literalExpectation("b", false);
  const peg$c100 = function() { return "\b"; };
  const peg$c101 = "f";
  const peg$c102 = peg$literalExpectation("f", false);
  const peg$c103 = function() { return "\f"; };
  const peg$c104 = "n";
  const peg$c105 = peg$literalExpectation("n", false);
  const peg$c106 = function() { return "\n"; };
  const peg$c107 = "r";
  const peg$c108 = peg$literalExpectation("r", false);
  const peg$c109 = function() { return "\r"; };
  const peg$c110 = "t";
  const peg$c111 = peg$literalExpectation("t", false);
  const peg$c112 = function() { return "\t"; };
  const peg$c113 = "u";
  const peg$c114 = peg$literalExpectation("u", false);
  const peg$c115 = function(digits: any) {
            return String.fromCharCode(parseInt(digits, 16));
          };
  const peg$c116 = function(sequence: any) { return sequence; };
  const peg$c117 = /^[^\0-\x1F"\\]/;
  const peg$c118 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false);
  const peg$c119 = /^[0-9a-f]/i;
  const peg$c120 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);

  let peg$currPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  const peg$resultsCache: {[id: number]: ICached} = {};

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsetests(): any {
    let s0, s1, s2, s3, s4, s5, s6;

    const key = peg$currPos * 38 + 0;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsetop_level_el();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseline_separator();
      if (s5 !== peg$FAILED) {
        s6 = peg$parsetop_level_el();
        if (s6 !== peg$FAILED) {
          s5 = peg$c0(s2, s6);
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseline_separator();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsetop_level_el();
          if (s6 !== peg$FAILED) {
            s5 = peg$c0(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (s3 !== peg$FAILED) {
        s2 = peg$c1(s2, s3);
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsefull_ws();
      if (s2 !== peg$FAILED) {
        s1 = peg$c2(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsemacros(): any {
    let s0, s1, s2, s3, s4, s5, s6;

    const key = peg$currPos * 38 + 1;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsetop_level_el();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseline_separator();
      if (s5 !== peg$FAILED) {
        s6 = peg$parsetop_level_el();
        if (s6 !== peg$FAILED) {
          s5 = peg$c0(s2, s6);
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseline_separator();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsetop_level_el();
          if (s6 !== peg$FAILED) {
            s5 = peg$c0(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (s3 !== peg$FAILED) {
        s2 = peg$c1(s2, s3);
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsefull_ws();
      if (s2 !== peg$FAILED) {
        s1 = peg$c3(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsetop_level_el(): any {
    let s0;

    const key = peg$currPos * 38 + 2;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parsetest();
    if (s0 === peg$FAILED) {
      s0 = peg$parsemacro();
      if (s0 === peg$FAILED) {
        s0 = peg$parsegastest();
        if (s0 === peg$FAILED) {
          s0 = peg$parsepending();
          if (s0 === peg$FAILED) {
            s0 = peg$parseonly();
            if (s0 === peg$FAILED) {
              s0 = peg$parseskip();
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsetest(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 38 + 3;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsefull_ws();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c4) {
        s2 = peg$c4;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseline_separator();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsesteps();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s1 = peg$c6(s4, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsegastest(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 38 + 4;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsefull_ws();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c7) {
        s2 = peg$c7;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseline_separator();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsesteps();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s1 = peg$c9(s4, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parsepending(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 38 + 5;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsefull_ws();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c10) {
        s2 = peg$c10;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestring();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseline_separator();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsesteps();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s1 = peg$c12(s4, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseonly(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    const key = peg$currPos * 38 + 6;
    const cached: ICached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
